@@ -1,6 +1,6 @@
 <ui version="4.0" >
- <class>katlasAboutDialog</class>
- <widget class="QDialog" name="katlasAboutDialog" >
+ <class>MarbleAboutDialog</class>
+ <widget class="QDialog" name="MarbleAboutDialog" >
   <property name="geometry" >
    <rect>
     <x>0</x>
@@ -216,7 +216,7 @@ p, li { white-space: pre-wrap; }
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>katlasAboutDialog</receiver>
+   <receiver>MarbleAboutDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel" >
@@ -232,7 +232,7 @@ p, li { white-space: pre-wrap; }
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>katlasAboutDialog</receiver>
+   <receiver>MarbleAboutDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel" >
